--- a/package.json
+++ b/package.json
@@ -25,20 +25,24 @@
     "@mui/x-date-pickers": "5.0.19",
     "antd": "^5.11.1",
     "apexcharts": "3.37.0",
-    "axios": "^1.6.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nprogress": "0.2.0",
+    "postcss": "^8.4.31",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-bootstrap": "^2.9.1",
     "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "simplebar-react": "^3.2.1",
+    "tailwindcss": "^3.3.5",
     "yup": "1.0.0"
   },
   "devDependencies": {
